# flight-delay-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile.extract  Dockerfile.train  Dockerfile.transform  README.md  extract.py  gcp-credentials.json  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
data/: flight.py  public-flights-v4.json
extract/: extract.py
lib/: enums.py  flight_delay_model.py  flight_manager.py  flight_transformer.py  logger.py  stats.py  storage_manager.py
src/: extract.py  flights.py  inference.py  main.py  models.py  stats.py  storage_manager.py  train.py  transform.py  utils.py
tests/: test_extract.py  test_ingest.py  test_storage_manager.py  test_transform.py
