[tool.poetry]
name = "flight-delay-prediction"
version = "0.1.0"
description = ""
authors = ["Daniel Steman <dst015@asr.nl>"]
readme = "README.md"
packages = [{include = "flight_delay_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
datamodel-code-generator = {extras = ["http"], version = "^0.21.4"}
pydantic = "^2.1.1"
google-cloud-storage = "^2.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
